--- a/rv2015/sections/Algorithm.tex
+++ b/rv2015/sections/Algorithm.tex
@@ -20,7 +20,7 @@ Many of the existing algorithms for evaluating formulas like $\eventually_{[l,h]
 %
 %To constantly check that the target system is adhering to its specification, we must constantly check the specification against the current system trace. To constantly check the system efficiently, \monitor is an iterative algorithm, performing additional checking as each new trace step arrives.
 
-\subsection{Specifications}
+\subsection{Specification Logic}
 Many safety specification rules for ARV-like systems require explicit time bounds to ensure timely behavior, so a specification language with explicit time bounds is important.
 For instance,
 %Examples of rules that utilize explicit time bounds include: %
