--- a/rv2015/sections/Background.tex
+++ b/rv2015/sections/Background.tex
@@ -100,12 +100,12 @@ through formula rewriting \cite{Rosu2005}.
 Thati and Ro\c{s}u \cite{Thati2005} describe a dynamic programming and rewriting-based
 algorithm for monitoring MTL formulas.
 % which is based on resolving the past and deriving the future.
-They perform formula rewriting which resolves past-time formulas
+They perform eager runtime monitoring by formula rewriting which resolves past-time formulas
 into equivalent formulas without unguarded past-time operators and derive new future-time
 formulas which separate the current state from future state.
 While they have a tight encoding of their canonical formulas, they still require more memory
 than some existing algorithms (because formulas
-grow in size as they are rewritten), including this work.
+grow in size as they are rewritten), including the current work.
 %Their evaluation algorithm is similar to ours, but they require more storage space to handle formula rewriting with potentially growing formulas.
 
 
