Updated complexity and promptness paragraphs

--- a/rv2015/rv2015_bibtex.bib
+++ b/rv2015/rv2015_bibtex.bib
@@ -460,3 +460,19 @@ author={Nickovic, Dejan and Maler, Oded}
   isbn = {978-3-642-29859-2},
   timestamp = {2013.09.03},
 }
+@ARTICLE{Kupferman2001,
+  author = {Kupferman, Orna and Vardi, MosheY.},
+    title = {Model Checking of Safety Properties},
+	journal = {Formal Methods in System Design},
+	year = {2001},
+	volume = {19},
+	pages = {291-314},
+	number = {3},
+	doi = {10.1023/A:1011254632723},
+	file = {Kupferman2001.pdf:mPapers\\Kupferman2001.pdf:PDF},
+	issn = {0925-9856},
+	keywords = {model checking; safety properties; automata},
+	language = {English},
+	publisher = {Kluwer Academic Publishers},
+	url = {http://dx.doi.org/10.1023/A%3A1011254632723}
+}
