--- a/rv2015/sections/Implementation.tex
+++ b/rv2015/sections/Implementation.tex
@@ -1,6 +1,7 @@
 %%% New implementation section
 
 \section{Monitor Implementation and Evaluation}
+\label{sec:implementation}
 
 %% paragraph 1 -- goals
 To evaluate the feasibility of our monitoring algorithm for safety-critical real-time systems we have built a real-time CAN monitor on an ARM Cortex-M4 development board. This allowed us to explore the necessary optimizations and features required to perform real-time checking of realistic safety policies.
