Adding discussion first shot

--- a/rv2015/rv2015_main.tex
+++ b/rv2015/rv2015_main.tex
@@ -161,6 +161,7 @@ the testing of an ARV system. \monitor was able to detect violations of several 
 \input{sections/Background}
 % \input{sections/Architecture}
 \input{sections/Algorithm}
+\input{sections/Discussion}
 \input{sections/Implementation}
 %\input{sections/Case_Study}
 \input{sections/Conclusion}
