--- a/rv2015/sections/Implementation.tex
+++ b/rv2015/sections/Implementation.tex
@@ -4,17 +4,50 @@
 \label{sec:implementation}
 
 %% paragraph 1 -- goals
-To evaluate the feasibility of our monitoring algorithm for safety-critical real-time systems we have built a real-time CAN monitor on an ARM Cortex-M4 development board. This allowed us to explore the necessary optimizations and features required to perform real-time checking of realistic safety policies.
+To evaluate the feasibility of our monitoring algorithm for safety-critical
+real-time systems we have built a real-time CAN monitor on an ARM Cortex-M4
+development board. This allowed us to explore the necessary optimizations and
+features required to perform real-time checking of realistic safety policies.
 
 %% paragraph 2 -- what we built
 
 %% Embedded restrictions
-Software for safety-critical embedded systems typically contains more strict design and programming model constraints than less critical software. Two important and common constraints for these systems are avoiding recursion and not using dynamic memory allocations.
+Software for safety-critical embedded systems typically contains more strict
+design and programming model constraints than less critical software. Two
+important and common constraints for these systems are avoiding recursion and
+not using dynamic memory allocations.
 % dynamic memory alloc
-Common safety-critical coding guidelines discourage or prohibit dynamic memory allocation to avoid memory leaks.
-Because our specification language is bounded, we can avoid dynamic allocation in our \monitor implementation by statically allocating space for the maximum number of entries for our history structures and other temporary data structures.
+Common safety-critical coding guidelines discourage or prohibit dynamic memory
+allocation to avoid memory leaks.
+Because our specification language is bounded, we can avoid dynamic allocation
+in our \monitor implementation by statically allocating space for the maximum
+number of entries for our history structures and other temporary data structures.
 % recursion
-Recursion is also usually prohibited because it can be difficult to guarantee a maximum stack depth when using recursion. Although \monitor utilizes recursion extensively, we can implement \monitor using a traditional iterative traversal of the specification formulas instead.
+Recursion is also usually prohibited because it can be difficult to guarantee a
+maximum stack depth when using recursion. Although \monitor utilizes recursion
+extensively, we can implement \monitor using a traditional iterative traversal
+of the specification formulas instead.
+
+\noindent\textbf{Discussion. }
+Passively monitoring running systems requires attention to timing issues with regards to system state sampling/capture.
+%
+The monitor keeps a copy of the target system state. When a new CAN message from the system is seen, the monitor updates its system state based on the incoming message. The monitor periodically takes a snapshot of this constantly updated state and uses that snapshot as the trace state which is monitored.
+%
+This means that the monitor's system state view is constantly updated at the speed of the CAN bus messages, but the actual monitored state (\ie, the trace) is a discrete sampling of this bus-based state.
+The monitor's period must be fast enough that any changes in system state which are relevant to the specification are seen by the sampling.
+To ensure this, the monitor's period should be twice as fast as the shortest CAN message period, which causes the monitored trace to contain every value seen on the CAN bus.
+If the monitor period is not fast enough, multiple CAN messages announcing the same system value may end up in the same trace state, which can cause those value changes to not be seen in the trace.
+For example, if the monitor is sampling at $2ms$, and three messages announcing the value of property $X$ are received at times $0$, $1ms$, and $1.5ms$, only the value announced at $1.5ms$ will be seen in the trace. To avoid this, the monitor would need to run faster than the messages interarrival rate (at least $0.5ms$ in this case).
+
+Along with requiring the monitor to sample its trace state fast enough to see all the relevant state changes, the specification time bounds must be a multiple of the monitoring period.
+Doing this ensures that each time step in the formula is evaluated on updated data.
+A simple way of understanding this is to use monitor steps as the temporal bounds instead of real time.
+For example, if the monitor is running at a 2ms period, we can use $\henceforth_{[0,50]} p$ as an equivalent to $\henceforth_{[0,100ms]} p$.
+Because the monitored trace state is only updating at 2ms, the state is unchanged from 0-2ms, and then again from 2-4ms, etc.
+If time-based bounds that are not multiples of the monitor period are used, different bounds can look at the same state, \eg, $\henceforth_{[0,5ms]} p$ is equivalent to $\henceforth_{[1ms,4ms]} p$ for a $2ms$ monitor. Since this is unintiutive, using steps or period-multiple bounds is best.
+% 
+Although the timing issues are intertwined, using a monitoring period at least twice as fast as the shortest CAN message period (\ie, shortest time between a CAN message retransmission) and only using temporal bound values that are multiples of this period provides intuitive monitoring results.
+
 
 \noindent\textbf{Hybrid Algorithm.}
 %Our eager monitoring algorithm attempts to evaluate specification rules as soon as possible, but this requires checking trace properties which may not be fully reducible given the current trace. These unfinished formula reductions require extra computation time, and in practice the majority of the policy reductions performed by \monitor will be these eager reductions which may not fully reduce.
@@ -32,15 +65,17 @@ This hybrid approach preserves the monitor's promptness guarantee (that all viol
 
 %As long as we know that the worst case execution time for message handing, incrementing the structures, and a single residue check is short enough to finish within a monitor period then we are guaranteed at least a conservatively correct and prompt output.
 
-\begin{figure}[tbp]
-\centering
-\includegraphics[width=3.7in]{img/scope_annotated_crop}
-\caption{Oscilloscope capture of embedded monitor task execution \label{fig:arch:oscope}}
-\end{figure}
+% \begin{figure}[tbp]
+% \centering
+% \includegraphics[width=3.7in]{img/scope_annotated_crop}
+% \caption{Oscilloscope capture of embedded monitor task execution \label{fig:arch:oscope}}
+% \end{figure}
 
 We have implemented the hybrid monitoring algorithm in our embedded monitor. The monitor updates the history structures (shared between the conservative and eager checking) and performs a conservative check once every monitoring period. It then uses the idle time between periods to perform eager checking of any remaining unchecked specification properties.
 %
-Figure \ref{fig:arch:oscope} shows the execution of the embedded monitor instrumented to output the currently executing task to an oscilloscope. The residue checks run twice per trace update due to the monitor configuration used during the test, but this is not required for correct monitoring.
+% Figure \ref{fig:arch:oscope} shows the execution of the embedded monitor
+% instrumented to output the currently executing task to an oscilloscope.
+The residue checks run twice per trace update due to the monitor configuration used during the test, but this is not required for correct monitoring.
 This task output was captured while monitoring the specification used in the case study (see Section \ref{sec:case_study}) plus another 200 time-step \emph{eventually} rule which was never satisfied.
 %(guaranteeing an extra 200 eager residue checks every period).
 The rule never being satisfied means that the monitor performed an eager check of all 200 residues for this rule at every step (i.e., since they were never satisfied, they could never be reduced early).
@@ -72,7 +107,7 @@ The specification evaluated in the embedded monitor on the test logs are shown i
 
 
 
-\begin{table}[t]
+\begin{table}[htbp]
 \centering
 %\begin{tabular}{|p{3in}|l|}
 \footnotesize
