--- a/rv2015/sections/Algorithm.tex
+++ b/rv2015/sections/Algorithm.tex
@@ -113,7 +113,7 @@ For past- and present-time formulas \policyv, $\wdelay(\policyv)=0$.
 %as \policyv can be evaluated currently.
 %since all trace steps necessary to evaluate them have already been seen by the monitor.
 Future time formulas have a delay based on the interval of the future operator
-(\eg, $\wdelay(\LTLdiamond_{[0,3]} \pred{p}) = 3$). The length of a formula $\policy$, denoted $|\policy|$, returns the total number of subformulas of \policy.
+(\eg, $\wdelay(\eventually_{[0,3]} \pred{p}) = 3$). The length of a formula $\policy$, denoted $|\policy|$, returns the total number of subformulas of \policy.
 %, (\ie, the number of nodes in the policy AST).
 % The function \tempSub takes as input a formula \policy, and returns all the temporal subformulas \policyv of \policy and strict subformulas of \policyv.
 
@@ -209,50 +209,127 @@ The only difference between the top-level formula and other temporal subformula 
 \end{figure}
 
 \textbf{Reducing Residues.}
-\monitor works primarily by reducing formula residues down to truth values. Residues are reduced by the $\reduce(\sigma_i, \tau_i, \histSt{i}, \rpt{j}{\policyv}{\policy})$ function, which uses the current state ($\sigma_i,\tau_i$) and the stored history in $\histSt{i}$ to rewrite the formula $\policyv$ to a reduced form, either a truth value or a new formula which will evaluate to the same truth value as the original. For past or present-time formulas, $\reduce()$ is able to return a truth value residue since all the necessary information to decide the formula is available in the history and current state. Future-time policies may be fully-reducible if enough state information is available. If a future-time formula cannot be reduced to a truth value, it is returned as a reduced (potentially unchanged) residue.
-
+\monitor works primarily by reducing formula residues down to truth values.
+Residues are reduced by the $\reduce(\sigma_i, \tau_i, \histSt{i}, \rpt{j}{\policyv}{\policy})$ function,
+which uses the current state ($\sigma_i,\tau_i$) and the stored history in $\histSt{i}$ to rewrite
+the formula $\policyv$ to a reduced form, either a truth value or a new formula which will evaluate
+to the same truth value as the original.
+For past or present-time formulas, $\reduce()$ is able to return a truth value residue
+since all the necessary information to decide the formula is available in the history and current state.
+In a given state, if the input formula $\policy\equiv p$, \reduce returns true
+only if $p$ is true in the state and returns false otherwise. For input formula
+of form $\policy\equiv\policy_1\vee\policy_2$, \reduce is recursively called for
+$\policy_1$ and $\policy_2$, respectively, and the formula $\policy_1\vee\policy_2$ is reduced
+to $\policy_a\vee\policy_b$ (simplified if necessary) where $\policy_a$ and
+$\policy_b$ are reduced form of $\policy_1$ and $\policy_2$, respectively. Negation
+is handled similarly. Future-time policies may be fully-reducible if enough state
+information is available. If a future-time formula cannot be reduced to a truth
+value, it is returned as a reduced (potentially unchanged) residue.
+%
 % reduce for until
-For residues whose formula is an \emph{until} formula $\alpha \until_{[l,h]} \beta$, the history structures $\histst[\alpha]{i}$ and $\histst[\beta]{i}$ are used to reduce the formula.
-If the formula can be evaluated conclusively then the truth value is returned, otherwise the residue is returned unchanged.
-Figure \ref{fig:until} shows the reduction algorithm for \emph{until} temporal formula. Reducing \emph{since} formulas is essentially the same except with reversed minimum/maximums and past time bounds.
-
+For residues whose formula is an \emph{until} formula $\alpha \until_{[l,h]} \beta$,
+the history structures $\histst[\alpha]{i}$ and $\histst[\beta]{i}$ are used to
+reduce the formula. If the formula can be evaluated conclusively then the truth
+value is returned, otherwise the residue is returned unchanged.
+The reduction algorithm for \emph{until} temporal formula is shown below.
+Reducing \emph{since} formulas is essentially the same except with reversed
+minimum/maximums and past time bounds.
+%
 %%% TAU UNTIL
-\begin{figure}
-\small
+% \begin{figure}
+% \small
+% \begin{align*}
+% \mathbf{reduce}(\sigma_i,\tau, i,\mathbb{S}^i_{\alpha\, \mathcal{U}_{[l,h]}\, \beta} ,\rp{j}{\alpha\, \mathcal{U}_{[l,h]}\, \beta}) = \left\{
+% \begin{aligned}
+% &\text{let } a_a \leftarrow min(\{k | \tau_j \leq \tau_k \leq \tau_j+h  \wedge \rp{k}{\bot} \in S^i_\alpha \},i) \\
+% % a_u
+% %& a_u \leftarrow max({k| \tau_j \leq \tau_k \leq \tau_j+h \wedge \rp{k}{\alpha'} \in S^i_\alpha \wedge \alpha' \not\equiv \top},i) \\
+% & a_u \leftarrow max(\{k| \tau_k \in [\tau_j,\tau_j+h] \\
+% & \quad \quad \quad \wedge \forall k' \in [j,k-1].(\rp{k'}{\alpha'} \in S^i_\alpha \wedge \alpha' \equiv \top\},i) \\
+% % b_a
+% & b_a \leftarrow min(\{k | \tau_j+l \leq \tau_k \leq \tau_j+h \wedge \rp{k}{\beta'} \in S^i_\beta \wedge \beta' \neq \bot\}) \\
+% % b_t
+% &b_t \leftarrow min(\{k | \tau_j+l \leq \tau_k \leq \tau_j+h \wedge \rp{k}{\top} \in S^i_{\beta} \}) \\
+% % b_n
+% &b_n \leftarrow \top \text{ if } (\tau_i - \tau_j \geq \wdelay(\psi)) \\
+% & \quad \quad \quad \wedge \forall k.(\tau_j+l \leq \tau_k \leq \tau_j+h). \rp{k}{\bot} \in S^i_{\beta} \\
+% &\text{if } b_t \neq \emptyset \wedge a_u \geq b_t \\
+% & \quad\mathbf{return} \rp{j}{\top} \\
+% &\text{else if } (b_a \neq \emptyset \wedge a_a < b_a) \text{ or } b_n = \top\\ & \quad\mathbf{return} \rp{j}{\bot} \\
+% &\text{else} \\
+% & \quad\mathbf{return} \rp{j}{\alpha\, \mathcal{U}_{[l,h]}\, \beta}
+% \end{aligned} \right. \\
+% \end{align*}
+% %\normalsize
+% \caption{Definition of \reduce for \emph{until} formulas \label{fig:until}}
+% \end{figure}
+%
+\begin{small}
+% \begin{figure}
+% \small
+% \[
 \begin{align*}
-\mathbf{reduce}(\sigma_i,\tau, i,\mathbb{S}^i_{\alpha\, \mathcal{U}_{[l,h]}\, \beta} ,\rp{j}{\alpha\, \mathcal{U}_{[l,h]}\, \beta}) = \left\{
-\begin{aligned}
+&\mathbf{reduce}(\sigma_i,\tau_i, i,\mathbb{S}^i_{\alpha\, \mathcal{U}_{[l,h]}\, \beta} ,\rp{j}{\alpha\, \mathcal{U}_{[l,h]}\, \beta}) ::=\\
+% \left\{
+% \begin{cases}
 &\text{let } a_a \leftarrow min(\{k | \tau_j \leq \tau_k \leq \tau_j+h  \wedge \rp{k}{\bot} \in S^i_\alpha \},i) \\
 % a_u
 %& a_u \leftarrow max({k| \tau_j \leq \tau_k \leq \tau_j+h \wedge \rp{k}{\alpha'} \in S^i_\alpha \wedge \alpha' \not\equiv \top},i) \\
-& a_u \leftarrow max(\{k| \tau_k \in [\tau_j,\tau_j+h] \\
-& \quad \quad \quad \wedge \forall k' \in [j,k-1].(\rp{k'}{\alpha'} \in S^i_\alpha \wedge \alpha' \equiv \top\},i) \\
+ &a_u \leftarrow max(\{k| \tau_k \in [\tau_j,\tau_j+h]
+ % &\quad \quad \quad
+ \wedge \forall k' \in [j,k-1].(\rp{k'}{\alpha'} \in S^i_\alpha \wedge \alpha' \equiv \top\},i) \\
 % b_a
-& b_a \leftarrow min(\{k | \tau_j+l \leq \tau_k \leq \tau_j+h \wedge \rp{k}{\beta'} \in S^i_\beta \wedge \beta' \neq \bot\}) \\
+ &b_a \leftarrow min(\{k | \tau_j+l \leq \tau_k \leq \tau_j+h \wedge \rp{k}{\beta'} \in S^i_\beta \wedge \beta' \neq \bot\}) \\
 % b_t
 &b_t \leftarrow min(\{k | \tau_j+l \leq \tau_k \leq \tau_j+h \wedge \rp{k}{\top} \in S^i_{\beta} \}) \\
 % b_n
-&b_n \leftarrow \top \text{ if } (\tau_i - \tau_j \geq \wdelay(\psi)) \\
-& \quad \quad \quad \wedge \forall k.(\tau_j+l \leq \tau_k \leq \tau_j+h). \rp{k}{\bot} \in S^i_{\beta} \\
-&\text{if } b_t \neq \emptyset \wedge a_u \geq b_t \\
-& \quad\mathbf{return} \rp{j}{\top} \\
-&\text{else if } (b_a \neq \emptyset \wedge a_a < b_a) \text{ or } b_n = \top\\ & \quad\mathbf{return} \rp{j}{\bot} \\
-&\text{else} \\
-& \quad\mathbf{return} \rp{j}{\alpha\, \mathcal{U}_{[l,h]}\, \beta}
-\end{aligned} \right. \\
-\end{align*}
+&b_n \leftarrow \top \text{ if } (\tau_i - \tau_j \geq \wdelay(\psi))
+ % &\quad \quad \quad
+ \wedge \forall k.(\tau_j+l \leq \tau_k \leq \tau_j+h). \rp{k}{\bot} \in S^i_{\beta} \\
+&\text{if } b_t \neq \emptyset \wedge a_u \geq b_t
+% \\
+ % &
+ \quad\mathbf{return}
+ \rp{j}{\top} \\
+&\text{else if } (b_a \neq \emptyset \wedge a_a < b_a) \text{ or } b_n = \top
+% \\
+% &
+\quad
+\mathbf{return} \rp{j}{\bot} \\
+&\text{else}
+% \\
+ % &
+ \quad\mathbf{return} \rp{j}{\alpha\, \mathcal{U}_{[l,h]}\, \beta}
+% \end{cases}
+% \\
+% \]
+ \end{align*}
 %\normalsize
-\caption{Definition of \reduce for \emph{until} formulas \label{fig:until}}
-\end{figure}
-
-The \reduce function for $\emph{until}$ formulas uses marker values to evaluate the semantics of $\emph{until}$. \reduce calculates five marker values: $a_a$ is the earliest step within the time interval where $\alpha$ is known false. $a_u$ is the latest step within the interval that $\alpha \until_{[l,h]} \beta$ would be true if $\beta$ were true at that step. $b_a$ is the earliest step within the interval at which $\beta$ is not conclusively false, and $b_t$ is the earliest step within the interval at which $\beta$ is conclusively true. $b_n$ holds whether the current step $i$ is later than the wait delay and all $\beta$ values within the interval are false. With these marker variables, reduce can directly check the semantics of \emph{until}, and either return the correct value or the unchanged residue if the semantics are not conclusive with the current history. Reducing \emph{since} formulas works in the same way (using the same marker values) adjusted to past time intervals and utilizing the unbounded past time history values.
+% \caption{Definition of \reduce for \emph{until} formulas \label{fig:until}}
+% \end{figure}
+\end{small}
+%
+The \reduce function for $\emph{until}$ formulas uses marker values to evaluate the semantics of $\emph{until}$.
+\reduce calculates five marker values: $a_a$ is the earliest step within the time
+interval where $\alpha$ is known false. $a_u$ is the latest step within the interval that
+$\alpha \until_{[l,h]} \beta$ would be true if $\beta$ were true at that step.
+$b_a$ is the earliest step within the interval at which $\beta$ is not conclusively false,
+and $b_t$ is the earliest step within the interval at which $\beta$ is conclusively true.
+$b_n$ holds whether the current step $i$ is later than the wait delay and all $\beta$
+values within the interval are false. With these marker variables, reduce can directly
+check the semantics of \emph{until}, and either return the correct value or the unchanged
+residue if the semantics are not conclusive with the current history. Reducing \emph{since}
+formulas works in the same way (using the same marker values) adjusted to past time intervals
+and utilizing the unbounded past time history values.
 
 
 \textbf{Incrementing History Structures.}
 To evaluate past and future-time policies, we must correctly store trace history which can be looked up during a residue reduction.
 We store the trace history of a formula $\policyv$ in a history structure $\histst[\policyv]{}$.
 This history structure contains a list of residues for the number of steps required to evaluate the top-level formula. History structures are incremented by the function
-$\incrS(\histst[\policyv]{i-1}, \histSt[\policyv]{i}, \sigma_i, \tau_i, i) = (\bigcup_{r \in \histst[\policyv]{i-1}} \reduce(\sigma_i, \tau_i, \histst[\policyv]{i}, r)) \cup \reduce(\sigma_i, \tau_i, \histst[\policyv]{i}, \rp{i}{\policyv})$
+$\incrS(\histst[\policyv]{i-1}, \histSt[\policyv]{i}, \sigma_i, \tau_i, i) =
+(\displaystyle\bigcup_{r \in \histst[\policyv]{i-1}} \reduce(\sigma_i, \tau_i, \histst[\policyv]{i}, r)) \cup
+\reduce(\sigma_i, \tau_i, \histst[\policyv]{i}, \rp{i}{\policyv})$.
 %
 This function takes the previous step's history structure $\histst[\policyv]{i-1}$ and the current state
 %($\sigma_i,\tau_i$, and the updated smaller history structures $\histSt[\policyv]{i}$)
